--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -13,8 +13,7 @@
       Design project you have undertaken, take our quick and simple 1 minute test below to see if
       you qualify for tax relief from HRMC.
     </p>
-    <button class="btn btn-primary"
-            [routerLink]="['/tltv1']">
+    <button mat-stroked-button [routerLink]="['/tltv1']">
       Take our test!
     </button>
   </div>
