--- a/src/app/createPDF.component.html
+++ b/src/app/createPDF.component.html
@@ -117,283 +117,15 @@
     <p style="font-size: 12pt; font-family: arial, helvetica, sans-serif;">
       <strong>MaximumR&D, {{todayDate | date: 'MMMM y'}}</strong>
     </p>
-
-<!--    <img src="assets/img/Placeholder_logo_TEMPORARY.png" height="30" alt="">-->
-
-<!--    <p style="font-family: arial, helvetica, sans-serif;">-->
-<!--      name: {{claimForm.name}}-->
-<!--    </p>-->
-<!--    <p style="font-family: arial, helvetica, sans-serif;">-->
-<!--      compName: {{claimForm.compName}}-->
-<!--    </p>-->
-<!--    <p style="font-family: arial, helvetica, sans-serif;">-->
-<!--      UTR: {{claimForm.UTR}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      compAdr: {{claimForm.compAdr}}-->
-<!--    </p>-->
-<!--    <p style="margin-left: 50px">-->
-<!--      claimStartDate: {{claimForm.claimStartDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      claimEndDate: {{claimForm.claimEndDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      addressLine1: {{claimForm.addressLine1}}-->
-<!--    </p>-->
-<!--    <p *ngIf="address2Used">-->
-<!--      addressLine2: {{claimForm.addressLine2}}-->
-<!--    </p>-->
-<!--    <p *ngIf="address3Used">-->
-<!--      addressLine3: {{claimForm.addressLine3}}-->
-<!--    </p>-->
-<!--    <p style="margin-left: 100px">-->
-<!--      addressTown: {{claimForm.addressTown}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      addressCounty: {{claimForm.addressCounty}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      addressPostcode: {{claimForm.addressPostcode}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectSynopsis: {{claimForm.projectSynopsis}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectName: {{claimForm.projectName}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectDurationRadio: {{claimForm.projectDurationRadio}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectStartDate: {{claimForm.projectStartDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectEndDate: {{claimForm.projectEndDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectRAndDDescription: {{claimForm.projectRAndDDescription}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectResearch: {{claimForm.projectResearch}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      problemToSolve: {{claimForm.problemToSolve}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectLead: {{claimForm.projectLead}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectLeadExperience: {{claimForm.projectLeadExperience}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      uniqueProjectDevelopment: {{claimForm.uniqueProjectDevelopment}}-->
-<!--    </p>-->
-<!--    <p *ngIf="projectProblemsUsed">-->
-<!--      projectProblems: {{claimForm.projectProblems}}-->
-<!--    </p>-->
-<!--    <p *ngIf="projectProblemsDifficultyUsed">-->
-<!--      projectProblemsDifficulty: {{claimForm.projectProblemsDifficulty}}-->
-<!--    </p>-->
-<!--    <p *ngIf="projectProblemsSolvedUsed">-->
-<!--      projectProblemsSolved: {{claimForm.projectProblemsSolved}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectTesting: {{claimForm.projectTesting}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      softwareAdvance: {{claimForm.softwareAdvance}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      stateAid: {{claimForm.stateAid}}-->
-<!--    </p>-->
-
-<!--    Testing-->
-
-<!--    <p style="font-family: arial, helvetica, sans-serif;">-->
-<!--      name: {{claimForm.name}}-->
-<!--    </p>-->
-<!--    <p style="font-family: arial, helvetica, sans-serif;">-->
-<!--      compName: {{claimForm.compName}}-->
-<!--    </p>-->
-<!--    <p style="font-family: arial, helvetica, sans-serif;">-->
-<!--      UTR: {{claimForm.UTR}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      compAdr: {{claimForm.compAdr}}-->
-<!--    </p>-->
-<!--    <p style="margin-left: 50px">-->
-<!--      claimStartDate: {{claimForm.claimStartDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      claimEndDate: {{claimForm.claimEndDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      addressLine1: {{claimForm.addressLine1}}-->
-<!--    </p>-->
-<!--    <p *ngIf="address2Used">-->
-<!--      addressLine2: {{claimForm.addressLine2}}-->
-<!--    </p>-->
-<!--    <p *ngIf="address3Used">-->
-<!--      addressLine3: {{claimForm.addressLine3}}-->
-<!--    </p>-->
-<!--    <p style="margin-left: 100px">-->
-<!--      addressTown: {{claimForm.addressTown}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      addressCounty: {{claimForm.addressCounty}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      addressPostcode: {{claimForm.addressPostcode}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectSynopsis: {{claimForm.projectSynopsis}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectName: {{claimForm.projectName}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectDurationRadio: {{claimForm.projectDurationRadio}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectStartDate: {{claimForm.projectStartDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectEndDate: {{claimForm.projectEndDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectRAndDDescription: {{claimForm.projectRAndDDescription}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectResearch: {{claimForm.projectResearch}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      problemToSolve: {{claimForm.problemToSolve}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectLead: {{claimForm.projectLead}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectLeadExperience: {{claimForm.projectLeadExperience}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      uniqueProjectDevelopment: {{claimForm.uniqueProjectDevelopment}}-->
-<!--    </p>-->
-<!--    <p *ngIf="projectProblemsUsed">-->
-<!--      projectProblems: {{claimForm.projectProblems}}-->
-<!--    </p>-->
-<!--    <p *ngIf="projectProblemsDifficultyUsed">-->
-<!--      projectProblemsDifficulty: {{claimForm.projectProblemsDifficulty}}-->
-<!--    </p>-->
-<!--    <p *ngIf="projectProblemsSolvedUsed">-->
-<!--      projectProblemsSolved: {{claimForm.projectProblemsSolved}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectTesting: {{claimForm.projectTesting}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      softwareAdvance: {{claimForm.softwareAdvance}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      stateAid: {{claimForm.stateAid}}-->
-<!--    </p>-->
-
-<!--    <p style="font-family: arial, helvetica, sans-serif;">-->
-<!--      name: {{claimForm.name}}-->
-<!--    </p>-->
-<!--    <p style="font-family: arial, helvetica, sans-serif;">-->
-<!--      compName: {{claimForm.compName}}-->
-<!--    </p>-->
-<!--    <p style="font-family: arial, helvetica, sans-serif;">-->
-<!--      UTR: {{claimForm.UTR}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      compAdr: {{claimForm.compAdr}}-->
-<!--    </p>-->
-<!--    <p style="margin-left: 50px">-->
-<!--      claimStartDate: {{claimForm.claimStartDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      claimEndDate: {{claimForm.claimEndDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      addressLine1: {{claimForm.addressLine1}}-->
-<!--    </p>-->
-<!--    <p *ngIf="address2Used">-->
-<!--      addressLine2: {{claimForm.addressLine2}}-->
-<!--    </p>-->
-<!--    <p *ngIf="address3Used">-->
-<!--      addressLine3: {{claimForm.addressLine3}}-->
-<!--    </p>-->
-<!--    <p style="margin-left: 100px">-->
-<!--      addressTown: {{claimForm.addressTown}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      addressCounty: {{claimForm.addressCounty}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      addressPostcode: {{claimForm.addressPostcode}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectSynopsis: {{claimForm.projectSynopsis}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectName: {{claimForm.projectName}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectDurationRadio: {{claimForm.projectDurationRadio}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectStartDate: {{claimForm.projectStartDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectEndDate: {{claimForm.projectEndDate.seconds * 1000 | date:'dd-MM-yyyy'}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectRAndDDescription: {{claimForm.projectRAndDDescription}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectResearch: {{claimForm.projectResearch}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      problemToSolve: {{claimForm.problemToSolve}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectLead: {{claimForm.projectLead}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectLeadExperience: {{claimForm.projectLeadExperience}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      uniqueProjectDevelopment: {{claimForm.uniqueProjectDevelopment}}-->
-<!--    </p>-->
-<!--    <p *ngIf="projectProblemsUsed">-->
-<!--      projectProblems: {{claimForm.projectProblems}}-->
-<!--    </p>-->
-<!--    <p *ngIf="projectProblemsDifficultyUsed">-->
-<!--      projectProblemsDifficulty: {{claimForm.projectProblemsDifficulty}}-->
-<!--    </p>-->
-<!--    <p *ngIf="projectProblemsSolvedUsed">-->
-<!--      projectProblemsSolved: {{claimForm.projectProblemsSolved}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      projectTesting: {{claimForm.projectTesting}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      softwareAdvance: {{claimForm.softwareAdvance}}-->
-<!--    </p>-->
-<!--    <p>-->
-<!--      stateAid: {{claimForm.stateAid}}-->
-<!--    </p>-->
   </div>
 
   <div>
     <button (click)="createPDF()">create PDF</button>
   </div>
 
-  <p (click)="testLog()" style="margin-top: 20px">
-    Test Log
-  </p>
+<!--  <p (click)="testLog()" style="margin-top: 20px">-->
+<!--    Test Log-->
+<!--  </p>-->
 
 </div>
 
