--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -1,20 +1,24 @@
 <div class="container" style="margin-top: 100px;">
   <div class="col-sm-12 text-left">
+    <div class="center" style="margin-bottom: 20px">
+      <a>
+        <img src="assets/img/Placeholder_logo_TEMPORARY.png" height="60" alt="">
+      </a>
+    </div>
     <h2>
-      Welcome to www.MaximumR&D.co.uk
+      Welcome to MaximumR&D.
     </h2>
     <p>
-      We are specialists R&D Tax claims
-      and have created an effective and easy to use service to help your company reap the benefits of
-      HRMC’s R&D claims system!
+      We are specialists in R&D Tax claims and have
+      created an effective and easy to use service to help your company reap the benefits of HMRC’s R&D claims system!
     </p>
     <p>
-      If you believe your company could be entitled to claim any amount of tax back on a Research and
-      Design project you have undertaken, take our quick and simple 1 minute test below to see if
-      you qualify for tax relief from HRMC.
+      If you believe your company could be entitled to claim any amount of tax back on a Research and Development
+      project you have undertaken, take our quick and simple 1 minute test below to see if you qualify for
+      tax relief from HMRC.
     </p>
     <button mat-stroked-button [routerLink]="['/tltv1']">
-      Take our test!
+      Take our test here.
     </button>
   </div>
 </div>
