--- a/src/app/components/forgot-password.component.html
+++ b/src/app/components/forgot-password.component.html
@@ -1,23 +1,41 @@
-<div class="displayTable" style="margin-top: 100px">
-  <div class="displayTableCell">
-    <div class="authBlock">
-      <h3>Reset Password</h3>
+<div class="container" style="margin-top: 100px">
+  <form [formGroup]="email">
+    <h3 style="margin-bottom: 20px">
+      Reset Password
+    </h3>
 
-      <p class="text-center">Please enter your email address to request a password reset.</p>
-
-      <div class="formGroup">
-        <input type="email" class="formControl" placeholder="Email Address" #passwordResetEmail required>
-      </div>
-
-      <!-- Calling ForgotPassword from AuthService Api -->
-      <div class="formGroup">
-        <input type="submit" class="btn btnPrimary" value="Reset Password" (click)="authService.forgotPassword(passwordResetEmail.value)">
-      </div>
+    <div class="form-group">
+      <h6>
+        Email address connected to account
+      </h6>
+      <mat-form-field class="col-5 mb-2 mx-auto" appearance="outline">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput formControlName="email"
+               placeholder="Email">
+        <mat-error *ngIf="email.get('email').hasError('email') && !email.get('email').hasError('required')">
+          Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="email.get('email').hasError('required')">
+          Email is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
     </div>
+  </form>
 
-    <div class="redirectToLogin">
-      <span>Go back to ? <span class="redirect" routerLink="/sign-in">Log In</span></span>
-    </div>
-
+  <div class="row" *ngIf="isIncomplete()">
+    <button mat-stroked-button disabled>
+      Send reset email
+    </button>
   </div>
+
+  <div class="row" *ngIf="!isIncomplete()">
+    <button mat-stroked-button (click)="sendReset()">
+      Send reset email
+    </button>
+  </div>
+
+  <div>
+    <span routerLink="/sign-in" style="cursor: pointer">Back to sign in</span>
+  </div>
+
 </div>
