--- a/src/app/tltv1.component.html
+++ b/src/app/tltv1.component.html
@@ -1,28 +1,13 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--  <meta charset="UTF-8">-->
-<!--  <title>Title</title>-->
-<!--</head>-->
-<!--<body>-->
-
-<!--</body>-->
-<!--</html>-->
-
 <div class="container" style="margin-top: 100px; margin-bottom: 50px">
   <div class="row">
      <div class="col-sm-12">
-<!--       <h2>-->
-<!--         Traffic light questions-->
-<!--       </h2>-->
        <h5>
-         Our quick test below allows us to determine if your company qualifies for R&D tax relief.
-         Please answer the questions to the best of your knowledge, as it will help
-         us to create the perfect claim for you!
+         Our quick test below allows us to determine if your company is likely to qualify for R&D tax relief.
+         Please answer the questions to the best of your knowledge, as it will help us to create
+         the perfect claim for you.
        </h5>
        <p>
-         None of your information will be stored at this point, and you are welcome to back out of
-         the test at any time
+         None of your information will be stored at this point, and you are welcome to leave the test at any time
        </p>
        <form  [formGroup]='trafficLightForm' (ngSubmit)="onSubmit()">
          <div class="form-group; question_border" style="margin-top: 20px">
