--- a/src/app/tltv1.component.html
+++ b/src/app/tltv1.component.html
@@ -12,7 +12,7 @@
        <form  [formGroup]='trafficLightForm' (ngSubmit)="onSubmit()">
          <div class="form-group; question_border" style="margin-top: 20px">
            <h6 style="margin-left: 3px">
-             Is your business a Limited Company?
+             1 - Is your business a Limited Company?
            </h6>
            <div class="row">
              <div class="justify-content-lg-around" style="padding-left: 15px">
@@ -34,7 +34,7 @@
          </div>
          <div class="form-group; question_border" style="margin-top: 50px">
            <h6 style="margin-left: 3px">
-             Is your Company in the UK?
+             2 - Is your Company in the UK?
            </h6>
            <div class="row">
              <div class="justify-content-lg-around" style="padding-left: 15px">
@@ -56,7 +56,7 @@
          </div>
          <div class="form-group; question_border" style="margin-top: 50px;">
            <h6 style="margin-left: 3px">
-             Did your Accounting Period end within the last 24 Months?
+             3 - Did your Accounting Period end within the last 24 Months?
            </h6>
            <div class="row">
              <div class="justify-content-lg-around" style="padding-left: 15px">
@@ -78,7 +78,7 @@
          </div>
          <div class="form-group; question_border" style="margin-top: 50px;">
            <h6 style="margin-left: 3px">
-             Are you developing, or have you already created a new product or process?
+             4a - Are you developing, or have you already created a new product or process?
            </h6>
            <div class="row">
              <div class="justify-content-lg-around" style="padding-left: 15px">
@@ -101,7 +101,7 @@
          </div>
          <div class="form-group; question_border" style="margin-top: 50px" *ngIf="displayQ5()">
            <h6 style="margin-left: 3px">
-             If not, are you trying to adapt, modify or reinvent a new product or process?
+             4b - If not, are you trying to adapt, modify or reinvent a new product or process?
            </h6>
            <div class="row">
              <div class="justify-content-lg-around" style="padding-left: 15px">
@@ -124,7 +124,7 @@
          </div>
          <div class="form-group; question_border" style="margin-top: 50px">
            <h6 style="margin-left: 3px">
-             Is there a risk your project will not succeed?
+             5 - Is there a risk your project will not succeed?
            </h6>
            <div class="row">
              <div class="justify-content-lg-around" style="padding-left: 15px">
@@ -146,7 +146,7 @@
          </div>
          <div class="form-group; question_border" style="margin-top: 50px">
            <h6 style="margin-left: 3px">
-             Is your company making a profit before tax?
+             6 - Is your company making a profit before tax?
            </h6>
            <div class="row">
              <div class="justify-content-lg-around" style="padding-left: 15px">
