--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -9,8 +9,9 @@
       Welcome to MaximumR&D.
     </h2>
     <p>
-      We are specialists in R&D Tax claims and have
-      created an effective and easy to use service to help your company reap the benefits of HMRC’s R&D claims system!
+      If you believe your company has been carrying on Research and Development, you may be entitled
+      to a tax credit payment from HMRC or a reduction in your Corporation Tax bill. Our simple
+      1-minute test will tell you if you are likely to be eligible.
     </p>
     <p>
       If you believe your company could be entitled to claim any amount of tax back on a Research and Development
