Fixes and additions based on the TODO list

--- a/src/app/createPDF.component.html
+++ b/src/app/createPDF.component.html
@@ -120,7 +120,7 @@
   </div>
 
   <div>
-    <button (click)="createPDF()">create PDF</button>
+    <button mat-stroked-button (click)="createPDF()">create PDF</button>
   </div>
 
 <!--  <p (click)="testLog()" style="margin-top: 20px">-->
