--- a/src/app/dialogs/success-traffic-light-dialog/success-traffic-light-dialog.html
+++ b/src/app/dialogs/success-traffic-light-dialog/success-traffic-light-dialog.html
@@ -5,3 +5,7 @@
 <p *ngIf="data[0] === 'no'">
   Any relief available will be given as a repayable tax credit
 </p>
+
+<button mat-stroked-button mat-dialog-close>
+  Close
+</button>
